# chess-llm

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
configs/: train_config.yaml
scripts/: benchmark.py  deploy.py  preprocess.py  sync.sh  train.py  upload.py
